FIX: make white legible on light mode

--- a/css/style.css
+++ b/css/style.css
@@ -859,6 +859,7 @@ blockquote {
 
 .brand-white {
     background-color: white;
+    outline: 1px solid #00000050;
     color: var(--accent-color);
 }
 
